--- a/Malloc_World_-_Freeing_of_the_dedicated_ram/Malloc_World_-_Freeing_of_the_dedicated_ram.cbp
+++ b/Malloc_World_-_Freeing_of_the_dedicated_ram/Malloc_World_-_Freeing_of_the_dedicated_ram.cbp
@@ -38,6 +38,9 @@
 		<Unit filename="map.c">
 			<Option compilerVar="CC" />
 		</Unit>
+		<Unit filename="movement.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
 		</Extensions>
